# Thingy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.gradle.kts  config.example.yml  db.sqlite  docker-compose.yml  flow_server.yml  settings.gradle.kts
.github/: FUNDING.yml
extras/: docker_init
queue_entry_executor/: .gitignore  flow.yml  ti_booster_cmd.py
queue_entry_executor/MagicPromptExecutor/: README.md  requirements.txt
queue_entry_executor/MagicPromptExecutor/executor/: __init__.py  magic_prompt.py  model_manager.py
queue_entry_executor/MagicPromptExecutor/executor/model/: .gitignore
queue_entry_executor/ThingyQueueExecutor/: Dockerfile  README.md  requirements.txt
queue_entry_executor/ThingyQueueExecutor/executor/: __init__.py  bootstrap.py  queue_executor.py  script.py
queue_entry_executor/extras/: test_queue_entry.py  test_script.py
queue_runner/: Cargo.toml
queue_runner/src/: consts.rs  main.rs  queue_runner.rs  tests.rs  types.rs
queue_runner/src/objects/: mod.rs  thingy_process.rs
queue_runner/src/resources/: bootstrap.py  redis_functions.lua  test_script.py
queue_runner/src/utils/: mod.rs  unix_time.rs
src/main/kotlin/: Client.kt  Config.kt  Consts.kt  Main.kt
src/main/kotlin/client/: NewClient.kt  QueueClient.kt  QueueEntry.kt  (+2 more)
src/main/proto/: jina.proto
thingy3/: .gitignore  Cargo.toml
thingy3/src/: main.rs
thingy3/src/discord_bot/: handler.rs  mod.rs
thingy3/src/vm/: command.rs  mod.rs  types.rs
thingy3/src/vm/modules/: mod.rs
thingy3/src/vm/modules/serenity/builder/: create_application_command.rs  mod.rs
(+141 files in other folders)
