[package]
name = "thingy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
rune = { version = "0.12.0" }
tokio = { version = "1.21.2", features = ["sync", "rt-multi-thread"] }
rune-modules = { version = "0.12.0", features = ["default"] }